# qreolink

./: .gitignore  CMakeLists.txt  DESCRIPTIONS.md  README.md
include/: CameraConfig.h  MainWindow.h  MpvWidget.h
packaging/: qreolink.desktop
src/: MainWindow.cpp  MpvWidget.cpp  main.cpp
